[package]
name = "fingerprint"
version = "0.1.0"
authors = ["Donnie Mattingly <donniewmattingly@gmail.com>"]

[dependencies]
hound = "3.3.0"
goertzel = "0.2.0"
image = "0.18.0"
rustfft = "2.0.0"
num-complex = "0.1.41"
apodize = "0.2.0"
nalgebra = "0.13.1"
log = "0.4.1"
log4rs = "0.8.0"
streaming-stats = "0.1"
rand = "0.4"
multimap = "0.4.0"
threadpool = "1.7.1"
stopwatch = "0.0.7"
libc = "0.2.38"

[dependencies.sha1]
version = "0.6.0"
features = ["std"]


[lib]
name = "fingerprint"
crate-type = ["staticlib", "cdylib"]